--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -64,7 +64,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mb-0 px-0 py-1 "  href="{% url 'home-page' %}"  >
+                            <a class="nav-link mb-0 px-0 py-1 "  href="{% url 'user-page' %}"  >
                                 <i class="fas fa-home text-lg"></i>
                                 <span class="ms-1">الصفحة الرئيسية</span>
                             </a>
