--- a/templates/userHeader.html
+++ b/templates/userHeader.html
@@ -6,9 +6,15 @@
                 <!-- Navbar -->
                 <nav class="navbar navbar-expand-lg blur blur-rounded top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
                     <div class="container-fluid">
-                        <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="{% url 'user-page' %}">
+                  {% if request.user.first_name %}
+                          <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="{% url 'home-page' %}">
                             <img src="{% static 'images/short_logo.png' %}" class="logo_login" />
                         </a>
+                      {% else %}
+                            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="{% url 'user-page' %}">
+                            <img src="{% static 'images/short_logo.png' %}" class="logo_login" />
+                        </a>
+                    {% endif %}
                         <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon mt-2">
                                 <span class="navbar-toggler-bar bar1"></span>
@@ -40,11 +46,19 @@
 
 
                                         {% else %}
+                                                                                       <li class="nav-item">
+                                    <a class="nav-link me-2" href="{% url 'user-page' %}">
+                                        <i class="fas fa-home opacity-6 text-dark me-1" aria-hidden="true"></i>
+                                       الصفحة الرئيسية
+                                    </a>
+
+                                </li>
                                                                                     <li class="nav-item">
                                     <a class="nav-link me-2" href="{% url 'login' %}">
                                         <i class="fas fa-key opacity-6 text-dark me-1" aria-hidden="true"></i>
                                         تسجيل دخول
                                     </a>
+
                                 </li>
                                     {% endif %}
 
