--- a/userInterface/templates/userInterface/rate-list.html
+++ b/userInterface/templates/userInterface/rate-list.html
@@ -45,14 +45,17 @@
                             <tbody>
                              {% for item in rates %}
                               <tr>
-                                        <td>
-                                            <div class="d-flex px-2 py-1">
-
-                                                <div class="d-flex flex-column justify-content-center">
-                                                    <h6 class="mb-0 text-sm">{{ item.CompanyEntered }}</h6>
-                                                </div>
-                                            </div>
-                                        </td>
+                                                                      <td>
+                        <div class="d-flex px-2 py-1">
+                          <div>
+                            <img src="{{ item.CompanyEntered.logo.url }}" class="avatar avatar-sm me-3" alt="user1">
+                          </div>
+                          <div class="d-flex flex-column justify-content-center">
+                            <h6 class="mb-0 text-sm">{{ item.CompanyEntered.name }}</h6>
+                            <p class="text-xs text-secondary mb-0">{{ item.email |urlize }}</p>
+                          </div>
+                        </div>
+                      </td>
                                         <td>
                                             <p class="text-xs font-weight-bold mb-0">{{ item.ResearchCompany }}</p>
                                         </td>
