--- a/main/templates/main/master_home.html
+++ b/main/templates/main/master_home.html
@@ -85,36 +85,15 @@
               <h6 class="mb-0">المحللين</h6>
             </div>
             <div class="card-body justify-content-center p-3">
-              <ul class="list-group">
-               {% for analyst in analysts %}
-                   <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
-                  <div class="avatar me-3">
-                      {% if  analyst.logo %}
-                    <img src="{{ analyst.logo.url }}" alt="kal" class="border-radius-lg shadow">
-                          {% else %}
-                                              <img src="{% static 'images/maal.png' %}" alt="kal" class="border-radius-lg shadow">
+    <canvas id="pie-chart"></canvas>
 
-                      {% endif %}
-                  </div>
-                  <div class="d-flex align-items-start flex-column justify-content-center">
-                    <h6 class="mb-0 text-sm">{{ analyst.name }}</h6>
-                    <p class="mb-0 text-xs">{{ analyst.CurrentJob }}</p>
-                  </div>
-                  <a class="btn btn-link pe-3 ps-0 mb-0 ms-auto" href="{% url 'user-interface' analyst.pk %}">المزيد</a>
-                </li>
-
-                  {% endfor %}
-
-              </ul>
             </div>
-          <div class="card-footer d-flex justify-content-center">
-              <a href="{% url 'all-user-analyst' %}" class="btn btn-sm btn-round text-white mb-0 me-1 bg-maal">المزيد</a>
-          </div>
+
           </div>
 
 
         </div>
-          <div class="col-xl-6 col-lg-5 col-md-7 pt-3">
+                                                      <div class="col-xl-6 col-lg-5 col-md-7 pt-3">
                     <div class="card h-100 mb-4 z-index-0">
             <div class="card-header pb-0">
               <div class="row">
@@ -167,7 +146,7 @@
                                             <p class="text-xs font-weight-bold mb-0">{{ item.ResearchCompany }}</p>
                                         </td>
                                         <td class="align-middle text-center text-sm">
-                                           <a href="{% url 'user-interface' item.AnalayticName.pk %}">
+                                           <a href="">
                                                 <span class="badge badge-sm bg-gradient-secondary">{{ item.AnalayticName }}</span>
                                            </a>
                                         </td>
@@ -214,8 +193,106 @@
           </div>
 
           </div>
-      </div>
 
+
+      </div>
+                  <div class="row  pt-4 mx-auto">
+                              <div class="col-xl-6 col-lg-6 col-md-7">
+          <div class="card z-index-0 h-100">
+            <div class="card-header pb-0 p-3">
+              <h6 class="mb-0">أعلى التقييمات بالنسبة للقيمة السوقية</h6>
+            </div>
+            <div class="card-body justify-content-center p-3">
+    <canvas id="bar-chart"></canvas>
+
+            </div>
+          </div>
+
+
+        </div>
+
+                                <div class="col-xl-6 col-lg-5 col-md-7 pt-3">
+                    <div class="card h-100 mb-4 z-index-0">
+            <div class="card-header pb-0">
+              <div class="row">
+                <div class="col-lg-6 col-7">
+                  <h6> أحدث المحللين </h6>
+                  <p class="text-sm mb-0">
+                    <i class="fa fa-check text-info" aria-hidden="true"></i>
+                    <span class="font-weight-bold ms-1">{{ high_rated.count }}</span>  المحللين
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="card-body px-0 pb-2">
+              <div class="table-responsive">
+                        <table class="table align-items-center mb-0">
+                            <thead>
+                                <tr>
+                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">إسم المحلل</th>
+                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">شركة الأبحاث الحالية</th>
+                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">الوظيفة</th>
+                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">الوظائف السابقة</th>
+                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">الهاتف</th>
+                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">البريد الألكترونى</th>
+                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">الحساب على تويتر </th>
+                                    <th class="text-secondary opacity-7"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                             {% for item in analysts %}
+                              <tr>
+                                        <td>
+                                            <div class="d-flex px-2 py-1">
+
+                                                <div class="d-flex flex-column justify-content-center">
+                                                    <h6 class="mb-0 text-sm">{{ item.name }}</h6>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <p class="text-xs font-weight-bold mb-0">{{ item.currentCompany.name }}</p>
+                                        </td>
+                                        <td class="align-middle text-center text-sm">
+                                            <span class="badge badge-sm bg-gradient-secondary">{{ item.CurrentJob }}</span>
+                                        </td>
+                                        <td>
+                                            <p class="text-xs font-weight-bold mb-0"><a href="{% url 'user-interface' item.pk %}" class="cursor-pointer"><i class="fas fa-briefcase"></i>المزيد</a></p>
+                                        </td>
+                                        <td>
+                                            <p class="text-xs font-weight-bold mb-0">{{ item.phone }}</p>
+                                        </td>
+                                        <td>
+                                            <p class="text-xs font-weight-bold mb-0">{{ item.email |urlize}}</p>
+                                        </td>
+                                        <td>
+
+                                           <a style="cursor: pointer; text-decoration: none;" href="https://twitter.com/{{ item.tiwtterAccount }}"><i  style="color: #0c5460" class="fab fa-twitter text-xl font-weight-bold mb-0">{{ item.tiwtterAccount }}</i></a>
+                                        </td>
+
+                                        <td class="ms-auto text-start">
+                                            <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'user-interface' item.pk %}"><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>المزيد</a>
+
+                                        </td>
+
+
+                                    </tr>
+                               {% endfor %}
+
+                            </tbody>
+                        </table>
+
+
+              </div>
+            </div>
+                       <div class="card-footer d-flex justify-content-center">
+              <a href="{% url 'all-user-analyst' %}" class="btn btn-sm btn-round text-white mb-0 me-1 bg-maal">المزيد</a>
+          </div>
+          </div>
+
+          </div>
+
+                  </div>
       </div>
 
 
@@ -225,3 +302,55 @@
        </div>
 
 {% endblock body %}
+
+
+{% block scripts %}
+
+      <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+
+         <script>
+
+    var config = {
+      type: 'bar',
+      data: {
+        datasets: [{
+          data: {{ data|safe }},
+          backgroundColor: [
+            '#696969', '#A9942A', '#696969', '#A9942A', '#D3D3D3'
+          ],
+          label: 'اعلى محللين تقييما'
+        }],
+        labels: {{ labels|safe }}
+      },
+      options: {
+        responsive: true
+      }
+    };
+
+    window.onload = function() {
+      var ctx = document.getElementById('pie-chart').getContext('2d');
+      window.myPie = new Chart(ctx, config);
+            var ctx_rates = document.getElementById('bar-chart').getContext('2d');
+      window.myPie = new Chart(ctx_rates, ratesconfig);
+    };
+
+
+     var ratesconfig = {
+      type: 'pie',
+      data: {
+        datasets: [{
+          data: {{ RateData|safe }},
+          backgroundColor: [
+            '#696969', '#A9942A', '#000000', '#808080', '#D3D3D3'
+          ],
+          label: 'اعلى محللين تقييما'
+        }],
+        labels: {{ RateLables|safe }}
+      },
+      options: {
+        responsive: true
+      }
+    };
+
+  </script>
+{% endblock scripts %}
