--- a/userInterface/templates/userInterface/analyst-list.html
+++ b/userInterface/templates/userInterface/analyst-list.html
@@ -3,7 +3,7 @@
 {% block title %} صحيفة مال  {% endblock title %}
 
 {% block body %}
-       <div class="m position-relative" style="background-image: url('../../../static/images/tadawel.jpg') ; background-size: cover;">
+       <div class="m position-relative" style="background-image: url('../../../static/images/maal.png') ; background-size: cover;">
     <main class="main-content border-radius-sm">
       <div class="section min-vh-100 position-relative transform-scale-0 transform-scale-md-0 m-auto m-0">
         <div class="container">
