--- a/templates/header.html
+++ b/templates/header.html
@@ -18,6 +18,14 @@
                     <span class="nav-link-text me-1">التقييم البحثى</span>
                 </a>
             </li>
+          <li class="nav-item">
+                <a class="nav-link " href="{% url 'expectations-list' %}">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
+                        <i class="fab fa-bitcoin text-lg mal-color"></i>
+                    </div>
+                    <span class="nav-link-text me-1">التوقعات للأرباح</span>
+                </a>
+            </li>
 
                         <li class="nav-item">
                 <a class="nav-link " href="{% url 'analyst-list' %}">
