--- a/main/templates/main/master_home.html
+++ b/main/templates/main/master_home.html
@@ -8,75 +8,122 @@
       <div class="section min-vh-100 position-relative transform-scale-0 transform-scale-md-0 m-auto m-0">
         <div class="container">
          <div class="row pt-8">
-        <div class="col-lg-4 col-sm-6 mb-lg-0 mb-4">
-     <a href="{% url 'all-user-rate' %}">
-                   <div class="card">
-            <div class="card-body p-3">
+                                                            <div class="col-xl-12 col-lg-12 col-md-12">
+                    <div class="card h-100 mb-4 z-index-0">
+            <div class="card-header pb-0">
               <div class="row">
-                <div class="col-8">
-                  <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">المحللين</p>
-                    <h5 class="font-weight-bolder mb-0">
-                      <span class="text-success text-sm font-weight-bolder">{{ analysts__count }}</span>
-                    </h5>
-                  </div>
-                </div>
-                <div class="col-4 text-start">
-                  <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-                    <i class="fas fa-user text-lg opacity-10" aria-hidden="true"></i>
-                  </div>
+                <div class="col-lg-6 col-7">
+                  <h6>التوقعات للأرباح</h6>
+                  <p class="text-sm mb-0">
+                    <i class="fa fa-check text-info" aria-hidden="true"></i>
+                    <span class="font-weight-bold ms-1">{{ expects.count }}</span> أحدث التوفعات
+                  </p>
                 </div>
               </div>
             </div>
+            <div class="card-body px-0 pb-2">
+              <div class="table-responsive">
+
+                                           <table class="table align-items-center mb-0">
+                            <thead>
+                                <tr>
+                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">الشركة المدرجة</th>
+                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">شركة الأبحاث</th>
+                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">توقعات الأرباح</th>
+                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">اسم المحلل</th>
+                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">المرفق</th>
+                                    <th class="text-secondary opacity-7"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                             {% for item in expectations %}
+                              <tr>
+                                        <td>
+                                            <div class="d-flex px-2 py-1">
+
+                                                <div class="d-flex flex-column justify-content-center">
+                                                    <h6 class="mb-0 text-sm">{{ item.CompanyEntered.name }}</h6>
+                                                </div>
+                                            </div>
+                                        </td>
+                                 <td>
+                                            <div class="d-flex px-2 py-1">
+
+                                                <div class="d-flex flex-column justify-content-center">
+                                                    <h6 class="mb-0 text-sm">{{ item.ResearchCompany.name }}</h6>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <p class="text-xs font-weight-bold mb-0">{{ item.ExpectRate }}</p>
+                                        </td>
+                                        <td class="d-flex flex-column align-middle text-center text-sm">
+                                        <table class="table align-items-center mb-0">
+                                            <thead>
+                                              <tr>
+                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">السنه</th>
+                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">الربع</th>
+                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">الأرباح الفعلية</th>
+                                                                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">مدى الأنحراف</th>
+
+                                </tr>
+                                            </thead>
+                                        <tbody>
+                                            {% for expect in item.expectyear_set.all %}
+                                                <tr>
+                                                 <td>
+                                            <p class="text-xs font-weight-bold mb-0">{{ expect.year }}</p>
+                                        </td>
+                                                   <td>
+                                            <p class="text-xs font-weight-bold mb-0">{{ expect.quaratar }}</p>
+                                        </td>
+                                                        <td>
+                                            <p class="text-xs font-weight-bold mb-0">{{ expect.value }}</p>
+                                        </td>
+                                                  <td class="align-middle text-center">
+                                            {% if expect.DeviationRange < 0 %}
+                                                  <span class="text-danger text-lg font-weight-bold">{{ expect.DeviationRange|floatformat:-2 }} %</span>
+                                            {% else %}
+                                              <span class="text-success text-lg font-weight-bold">{{ expect.DeviationRange|floatformat:-2 }} %</span>
+                                            {% endif %}
+                                        </td>
+                                                </tr>
+                                                {% endfor %}
+                                        </tbody>
+                                        </table>
+
+                                        </td>
+                                        <td>
+                                            <p class="text-xs font-weight-bold mb-0">{{ item.analyst.name }}</p>
+                                        </td>
+                                        <td>
+                                            <a href="{{ item.report.url }}">
+                                                <p class="text-xs font-weight-bold mb-0"><i class="far fa-file-pdf maal-yello"></i></p>
+                                            </a>
+                                        </td>
+                                        <td class="ms-auto text-start">
+                                            <a class="btn btn-link text-dark px-3 mb-0" href=""><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>المزيد</a>
+
+                                        </td>
+
+
+                                    </tr>
+                               {% endfor %}
+
+                            </tbody>
+                        </table>
+
+
+              </div>
+            </div>
+                       <div class="card-footer d-flex justify-content-center">
+              <a href="{% url 'all-user-rate' %}" class="btn btn-sm btn-round text-white mb-0 me-1 bg-maal">المزيد</a>
+          </div>
           </div>
 
-     </a>
-        </div>
-        <div class="col-lg-4 col-sm-6 mb-lg-0 mb-4">
-    <a href="{% url 'all-user-rate' %}">
-                  <div class="card">
-            <div class="card-body p-3">
-              <div class="row">
-                <div class="col-8">
-                  <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">التقييمات</p>
-                    <h5 class="font-weight-bolder mb-0">
-                      <span class="text-success text-sm font-weight-bolder">{{ rates_count }}</span>
-                    </h5>
-                  </div>
-                </div>
-                <div class="col-4 text-start">
-                  <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-                    <i class="fas fa-id-card text-lg opacity-10" aria-hidden="true"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
 
-    </a>
-        </div>
-        <div class="col-lg-4 col-sm-6 mb-lg-0 mb-4">
-          <div class="card">
-            <div class="card-body p-3">
-              <div class="row">
-                <div class="col-8">
-                  <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">الشركات</p>
-                    <h5 class="font-weight-bolder mb-0">
-                      <span class="text-danger text-sm font-weight-bolder">{{ companies_count }}</span>
-                    </h5>
-                  </div>
-                </div>
-                <div class="col-4 text-start">
-                  <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-                    <i class="fas fa-building text-lg opacity-10" aria-hidden="true"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+
           </div>
                   <div class="row  pt-4 mx-auto">
         <div class="col-xl-6 col-lg-6 col-md-7">
@@ -295,7 +342,7 @@
                   </div>
 
         <div class="row pt-4 mx-auto">
-            <div class="col-lg-12">
+            <div class="col-xl-6 col-lg-5 col-md-7 pt-3">
                  <div class="card z-index-0 h-65">
             <div class="card-header pb-0 p-3">
               <h6 class="mb-0">أكثر الشركات المدرجة تقييما</h6>
@@ -306,6 +353,18 @@
             </div>
           </div>
             </div>
+                  <div class="col-xl-6 col-lg-5 col-md-7 pt-3">
+                 <div class="card z-index-0 h-65">
+            <div class="card-header pb-0 p-3">
+              <h6 class="mb-0">أكثر التوقعات للأرباح بالنسبة لشركات الأبحاث </h6>
+            </div>
+            <div class="card-body justify-content-center p-3">
+    <canvas id="expect-chart"></canvas>
+
+            </div>
+          </div>
+            </div>
+
         </div>
       </div>
 
@@ -322,6 +381,23 @@
       <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
          <script>
+    var expect_config = {
+      type: 'pie',
+      data: {
+        datasets: [{
+          data: {{ expectData|safe }},
+          backgroundColor: [
+            '#696969', '#A9942A', '#696969', '#A9942A', '#D3D3D3'
+          ],
+          label: 'أكثر التوقعات للأرباح بالنسبة لشركات الأبحاث'
+        }],
+        labels: {{ expectData|safe }}
+      },
+      options: {
+        responsive: true
+      }
+    };
+
 
     var config = {
       type: 'bar',
@@ -364,6 +440,8 @@
       window.myPie = new Chart(ctx_rates, ratesconfig);
       var company_ctx = document.getElementById('company-chart').getContext('2d');
       window.myPie = new Chart(company_ctx,configCompany );
+        var expect_ctx = document.getElementById('expect-chart').getContext('2d');
+      window.myPie = new Chart(expect_ctx,expect_config );
     };
 
 
