--- a/office/templates/office/expectation-list.html
+++ b/office/templates/office/expectation-list.html
@@ -79,42 +79,71 @@
                                         </td>
                                         <td class="d-flex flex-column align-middle text-center text-sm">
                                         <table class="table align-items-center mb-0">
-                                            <thead>
-                                              <tr>
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">السنه</th>
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">الربع</th>
-                                                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">الأرباح الفعلية</th>
+                                                                                       <thead>
+                                                        <tr>
+                                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                                السنه
+                                                            </th>
+                                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
+                                                                الربع
+                                                            </th>
+                                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                                الأرباح الفعلية
+                                                            </th>
 
-                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">توقعات الأرباح</th>
-                                                                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">مدى الأنحراف</th>
+                                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                                توقعات الأرباح للربع المقابل من العام السابق
+                                                            </th>
+                                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                                توقعات الأرباح للربع السابق من العام الحالى
+                                                            </th>
 
-                                </tr>
-                                            </thead>
-                                        <tbody>
-                                            {% for expect in item.expectyear_set.all %}
-                                                <tr>
-                                                 <td>
-                                            <p class="text-xs font-weight-bold mb-0">{{ expect.year }}</p>
-                                        </td>
-                                                   <td>
-                                            <p class="text-xs font-weight-bold mb-0">{{ expect.quaratar }}</p>
-                                        </td>
-                                                        <td>
-                                            <p class="text-xs font-weight-bold mb-0">{{ expect.value }}</p>
-                                        </td>
-                                                        <td>
-                                            <p class="text-xs font-weight-bold mb-0">{{ expect.ExpectRate }}</p>
-                                        </td>
-                                                  <td class="align-middle text-center">
-                                            {% if expect.DeviationRange < 0 %}
-                                                  <span class="text-danger text-lg font-weight-bold">{{ expect.DeviationRange|floatformat:-2 }} %</span>
-                                            {% else %}
-                                              <span class="text-success text-lg font-weight-bold">{{ expect.DeviationRange|floatformat:-2 }} %</span>
-                                            {% endif %}
-                                        </td>
-                                                </tr>
-                                                {% endfor %}
-                                        </tbody>
+                                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                                مدى الأنحراف عن الربع المقابل من العام السابق
+                                                            </th>
+                                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                                مدى الأنحراف عن الربع السابق من العام الحالى
+                                                            </th>
+
+                                                        </tr>
+                                                        </thead>
+
+                                                            <tbody>
+                                                            {% for expect in item.expectyear_set.all %}
+                                                                <tr>
+                                                                    <td>
+                                                                        <p class="text-xs font-weight-bold mb-0">{{ expect.year }}</p>
+                                                                    </td>
+                                                                    <td>
+                                                                        <p class="text-xs font-weight-bold mb-0">{{ expect.quaratar }}</p>
+                                                                    </td>
+                                                                    <td>
+                                                                        <p class="text-xs font-weight-bold mb-0">{{ expect.value }}</p>
+                                                                    </td>
+                                                                    <td>
+                                                                        <p class="text-xs font-weight-bold mb-0">{{ expect.ExpectPervYear }}</p>
+                                                                    </td>
+                                                                    <td>
+                                                                        <p class="text-xs font-weight-bold mb-0">{{ expect.ExpectThisYear }}</p>
+                                                                    </td>
+                                                                    <td class="align-middle text-center">
+                                                                        {% if expect.DeviationRangePastYear < 0 %}
+                                                                            <span class="text-danger text-lg font-weight-bold">{{ expect.DeviationRangePastYear|floatformat:-2 }} %</span>
+                                                                        {% else %}
+                                                                            <span class="text-success text-lg font-weight-bold">{{ expect.DeviationRangePastYear|floatformat:-2 }} %</span>
+                                                                        {% endif %}
+                                                                    </td>
+                                                                    <td class="align-middle text-center">
+                                                                        {% if expect.DeviationRangeThisYear < 0 %}
+                                                                            <span class="text-danger text-lg font-weight-bold">{{ expect.DeviationRangeThisYear|floatformat:-2 }} %</span>
+                                                                        {% else %}
+                                                                            <span class="text-success text-lg font-weight-bold">{{ expect.DeviationRangeThisYear|floatformat:-2 }} %</span>
+                                                                        {% endif %}
+                                                                    </td>
+
+                                                                </tr>
+                                                            {% endfor %}
+                                                            </tbody>
                                         </table>
 
                                         </td>
